# XvizRobotics

./: CMakeLists.txt  README.md  build.sh  build_release.bat  clean.bat  rebuild.sh  rebuild_release.bat  vcpkg.json
BenchmarkCases/: Case15_new.csv
app/: CMakeLists.txt
app/apollo_math/: CMakeLists.txt
app/auto_parking/: CMakeLists.txt  geometry_parking_utils.cc
app/common/: calculations.h  data_types.h  logger.h  macros.h  poly_roots.h  polygon_collide.h  rigid_transform2f.h  shapes.h  tic_toc.h  time.h  utils.h  vehicle_param.h  vehicle_state.h
app/cubic_spline/: cubic_curve.h
app/map/: esdf_map.h  grid_map.h
app/parametric_curve/: readme.md
app/parking_case_parser/: parking_case_parser.h
app/planner/: hybrid_astar.cpp  hybrid_astar.h  kino_model.h  node3d.h
app/spline/: polynomial.h
demo/: CMakeLists.txt  auto_parking_demo.cpp  map_demo.cpp  parking_case_parser_demo.cpp  shapes_demo.cpp  xvizMsgBridgeDemo.cpp
output/lib/x64-windows/Release/: apollo_math.lib  auto_parking.lib
xvizMsgBridge/include/: data_types.h  xvizMsgBridge.h  xviz_marcro.h  xviz_math.h  xviz_utils.h
xvizMsgBridge/lib/x64-windows/: protoMessage.lib  protobuf.lib  xvizMsgBridge.lib
